implement comment service update